Ajout des controls de saisi dans les methodes HTTP